fix stuff + mock test